syntax = "proto3";

package awfdata;

import "cmd_move.proto";
import "game.proto";
import "point.proto";

message EchoRequest {
	string text = 1;
}

message EchoResponse {
	string text = 1;
}

message InitPrototypeRequest {}
message InitPrototypeResponse {}

message GetGameStateRequest {}
message GetGameStateResponse {
    Game state = 1;
}

message GetPotentialMovesRequest {
    Point from = 1;
}

message GetPotentialMovesResponse {
    repeated Point moves = 1;
}

message MoveRequest {
    CmdMove cmd = 1;
}

message MoveResponse {}

service WasmService {
    // Testing/debug
	rpc Echo (EchoRequest) returns (EchoResponse) {}

    // Game stuff
    rpc InitPrototype (InitPrototypeRequest) returns (InitPrototypeResponse) {}
    rpc Move (MoveRequest) returns (MoveResponse) {}
    rpc GetGameState (GetGameStateRequest) returns (GetGameStateResponse) {}
    rpc GetPotentialMoves (GetPotentialMovesRequest) returns (GetPotentialMovesResponse) {}
}
